--- a/xyc.html
+++ b/xyc.html
@@ -837,46 +837,46 @@
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane fade active in" id="news_1">
               <ul>
-                <li>【微还款】2015年12月10日共23个项目按时完成全部还款</li>
-                <li>【微还款】2015年12月10日共23个项目按时完成全部还款</li>
-                <li>【微还款】2015年12月10日共23个项目按时完成全部还款</li>
-                <li>【微还款】2015年12月10日共23个项目按时完成全部还款</li>
-                <li>【微还款】2015年12月10日共23个项目按时完成全部还款</li>
-                <li>【微还款】2015年12月10日共23个项目按时完成全部还款</li>
-                <li>【微还款】2015年12月10日共23个项目按时完成全部还款</li>
+                <li>【最新投标】张**刚刚投资了6666元</li>
+                <li>【最新投标】张**刚刚投资了6666元</li>
+                <li>【最新投标】张**刚刚投资了6666元</li>
+                <li>【最新投标】张**刚刚投资了6666元</li>
+                <li>【最新投标】张**刚刚投资了6666元</li>
+                <li>【最新投标】张**刚刚投资了6666元</li>
+                <li>【最新投标】张**刚刚投资了6666元</li>
               </ul>
             </div>
             <div role="tabpanel" class="tab-pane fade" id="news_2">
               <ul>
-                <li>【微还款】2016年12月10日共23个项目按时完成全部还款</li>
-                <li>【微还款】2016年12月10日共23个项目按时完成全部还款</li>
-                <li>【微还款】2016年12月10日共23个项目按时完成全部还款</li>
-                <li>【微还款】2016年12月10日共23个项目按时完成全部还款</li>
-                <li>【微还款】2016年12月10日共23个项目按时完成全部还款</li>
-                <li>【微还款】2016年12月10日共23个项目按时完成全部还款</li>
-                <li>【微还款】2016年12月10日共23个项目按时完成全部还款</li>
+                <li>【最新投标】刘***刚才投资了8888元！！！</li>
+                <li>【最新投标】刘***刚才投资了8888元！！！</li>
+                <li>【最新投标】刘***刚才投资了8888元！！！</li>
+                <li>【最新投标】刘***刚才投资了8888元！！！</li>
+                <li>【最新投标】刘***刚才投资了8888元！！！</li>
+                <li>【最新投标】刘***刚才投资了8888元！！！</li>
+                <li>【最新投标】刘***刚才投资了8888元！！！</li>
               </ul>
             </div>
             <div role="tabpanel" class="tab-pane fade" id="news_3">
               <ul>
-                <li>【微还款】2015年12月10日共23个项目按时完成全部还款</li>
-                <li>【微还款】2015年12月10日共23个项目按时完成全部还款</li>
-                <li>【微还款】2015年12月10日共23个项目按时完成全部还款</li>
-                <li>【微还款】2015年12月10日共23个项目按时完成全部还款</li>
-                <li>【微还款】2015年12月10日共23个项目按时完成全部还款</li>
-                <li>【微还款】2015年12月10日共23个项目按时完成全部还款</li>
-                <li>【微还款】2015年12月10日共23个项目按时完成全部还款</li>
+                <li>【最新投标】张**刚刚投资了6666元</li>
+                <li>【最新投标】张**刚刚投资了6666元</li>
+                <li>【最新投标】张**刚刚投资了6666元</li>
+                <li>【最新投标】张**刚刚投资了6666元</li>
+                <li>【最新投标】张**刚刚投资了6666元</li>
+                <li>【最新投标】张**刚刚投资了6666元</li>
+                <li>【最新投标】张**刚刚投资了6666元</li>
               </ul>
             </div>
             <div role="tabpanel" class="tab-pane fade" id="news_4">
               <ul>
-                <li>【微还款】2016年12月10日共23个项目按时完成全部还款</li>
-                <li>【微还款】2016年12月10日共23个项目按时完成全部还款</li>
-                <li>【微还款】2016年12月10日共23个项目按时完成全部还款</li>
-                <li>【微还款】2016年12月10日共23个项目按时完成全部还款</li>
-                <li>【微还款】2016年12月10日共23个项目按时完成全部还款</li>
-                <li>【微还款】2016年12月10日共23个项目按时完成全部还款</li>
-                <li>【微还款】2016年12月10日共23个项目按时完成全部还款</li>
+                <li>【最新投标】*小刚刚才投资了666666元</li>
+                <li>【最新投标】*小刚刚才投资了666666元</li>
+                <li>【最新投标】*小刚刚才投资了666666元</li>
+                <li>【最新投标】*小刚刚才投资了666666元</li>
+                <li>【最新投标】*小刚刚才投资了666666元</li>
+                <li>【最新投标】*小刚刚才投资了666666元</li>
+                <li>【最新投标】*小刚刚才投资了666666元</li>
               </ul>
             </div>
           </div>
@@ -891,33 +891,22 @@
       <h3 class="text-center">合作伙伴</h3>
       <div class="text-center">
         <ul class="partner-list">
-          <li>
-            <a class="icon-uniE930" href="http://www.chinapay.com/" target="_blank"></a>
-          </li>
-          <li>
-            <a class="icon-uniE92F" href="http://www.chinapay.com/" target="_blank"></a>
-          </li>
-          <li>
-            <a class="icon-uniE92E" href="http://www.chinapay.com/" target="_blank"></a>
-          </li>
-          <li>
-            <a class="icon-uniE92A" href="http://www.chinapay.com/" target="_blank"></a>
-          </li>
-          <li>
-            <a class="icon-uniE929" href="http://www.chinapay.com/" target="_blank"></a>
-          </li>
-          <li>
-            <a class="icon-uniE931" href="http://www.chinapay.com/" target="_blank"></a>
-          </li>
-          <li>
-            <a class="icon-uniE92C" href="http://www.chinapay.com/" target="_blank"></a>
-          </li>
-          <li>
-            <a class="icon-uniE92B" href="http://www.chinapay.com/" target="_blank"></a>
-          </li>
-          <li>
-            <a class="icon-uniE92D" href="http://www.chinapay.com/" target="_blank"></a>
-          </li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
         </ul>
       </div>
     </div>
@@ -925,52 +914,6 @@
   <!-- /合作伙伴 -->
   <footer>
   </footer>
-  <!-- <!-- 登录对话框 -->
-  <!-- <div class="modal fade">
-    <div class="modal-dialog modal-md">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title">欢迎登录哈哈哈</h4>
-        </div>
-        <div class="modal-body">
-          <form class="form-horizontal">
-            <div class="form-group">
-              <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-              <div class="col-sm-10">
-                <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-              <div class="col-sm-10">
-                <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-              </div>
-            </div>
-            <div class="form-group">
-              <div class="col-sm-offset-2 col-sm-10">
-                <div class="checkbox">
-                  <label>
-                    <input type="checkbox"> Remember me
-                  </label>
-                </div>
-              </div>
-            </div>
-            <div class="form-group">
-              <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-default">Sign in</button>
-              </div>
-            </div>
-          </form>
-        </div>
-        <!-- <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div> -->
-      </div>
-    </div>
-  <!-- </div>  -->-->
-  <!-- /登录对话框 --> -->
   <script src="js/jquery/jquery.js"></script>
   <script src="js/bootstrap/js/bootstrap.js"></script>
   <script src="js/xyc.js"></script>
