--- a/xyc.html
+++ b/xyc.html
@@ -827,7 +827,7 @@
           <ul class="nav nav-pills nav-stacked news-nav" role="tablist">
             <li role="presentation" class="active"><a href="#news_1" aria-controls="news_1" role="tab" data-toggle="tab" data-title="全部新聞"><i class="icon-news01"></i></a></li>
             <li role="presentation"><a href="#news_2" aria-controls="news_2" role="tab" data-toggle="tab" data-title="媒體報道"><i class="icon-news02"></i></a></li>
-            <li role="presentation"><a href="#news_3" aria-controls="news_3" role="tab" data-toggle="tab" data-title="微金所頭條"><i class="icon-news03"></i></a></li>
+            <li role="presentation"><a href="#news_3" aria-controls="news_3" role="tab" data-toggle="tab" data-title="小油菜頭條"><i class="icon-news03"></i></a></li>
             <li role="presentation"><a href="#news_4" aria-controls="news_4" role="tab" data-toggle="tab" data-title="行業資訊"><i class="icon-news04"></i></a></li>
           </ul>
           <i class="line hidden-sm hidden-xs"></i>
