--- a/ball.html
+++ b/ball.html
@@ -203,6 +203,14 @@
 	</style>
 </head>
 <body>
+<!--[if lt IE 9]>
+<div class="browser-upgrade bg-info">
+    <div class="inner">
+        <p>你正在使用的浏览器已经 <strong>out</strong> 了. </p>
+
+        <p>请 <a href="http://browsehappy.com/">点击</a>更新你的浏览器~</p>
+    </div>
+</div><![endif]-->
 	<div id="demo"></div>
 		<audio src="music/heart.mp3"  controls autoplay loop preload>
   </audio>
