--- a/my.html
+++ b/my.html
@@ -9,12 +9,20 @@
     <script type="text/javascript" src="js/my.js"></script>
 </head>
 <body>
+<!--[if lt IE 9]>
+<div class="browser-upgrade bg-info">
+    <div class="inner">
+        <p>你正在使用的浏览器已经 <strong>out</strong> 了. </p>
+
+        <p>请 <a href="http://browsehappy.com/">点击</a>更新你的浏览器~</p>
+    </div>
+</div><![endif]-->
 <div class="wrap" id="wrap">
    <div class="slide" id="slide">
        <ul>
-           <li><a href="http://liuziming.github.io/sk.html" target="blank"><img src="images/my05.jpg" alt=""/></a></li>
+           <li><a href="http://liuziming.github.io/secoo.html" target="blank"><img src="images/my05.jpg" alt=""/></a></li>
            <li><a href="http://liuziming.github.io/xyc.html" target="blank"><img src="images/my04.jpg" alt=""/></a></li>
-           <li><a href="http://liuziming.github.io/mi.html" target="blank"><img src="images/my03.jpg" alt=""/></a></li>
+           <li><a href="http://liuziming.github.io/skip.html" target="blank"><img src="images/my03.jpg" alt=""/></a></li>
            <li><a href="http://liuziming.github.io/waterfall.html" target="blank"><img src="images/my02.jpg" alt=""/></a></li>
            <li><a href="http://liuziming.github.io/ball.html" target="blank"><img src="images/my01.jpg" alt=""/></a></li>
        </ul>
