--- a/waterfall.html
+++ b/waterfall.html
@@ -28,6 +28,14 @@
     </style>
 </head>
 <body>
+<!--[if lt IE 9]>
+<div class="browser-upgrade bg-info">
+    <div class="inner">
+        <p>你正在使用的浏览器已经 <strong>out</strong> 了. </p>
+
+        <p>请 <a href="http://browsehappy.com/">点击</a>更新你的浏览器~</p>
+    </div>
+</div><![endif]-->
    <div class="container" id="content">
        <div class="box">
            <img src="images/xz01.jpg" alt=""/>
@@ -98,7 +106,7 @@
        <div class="box">
            <img src="images/xz23.jpg" alt=""/>
        </div>
-       <!-- <div class="box">
+       <div class="box">
            <img src="images/xz24.jpg" alt=""/>
        </div>
        <div class="box">
@@ -106,8 +114,8 @@
        </div>
        <div class="box">
            <img src="images/xz26.jpg" alt=""/>
-       </div> -->
-       <!-- <div class="box">
+       </div>
+       <div class="box">
            <img src="images/xz27.jpg" alt=""/>
        </div>
        <div class="box">
@@ -136,8 +144,9 @@
        </div>
        <div class="box">
            <img src="images/xz36.jpg" alt=""/>
-       </div> -->
+       </div>
    </div>
+
        <!-- <button id="btn">点击加载更多...</button> -->
 
    <audio src="music/xz.mp3" autoplay>
