--- a/secoo.html
+++ b/secoo.html
@@ -10,6 +10,14 @@
     <script src="js/sk.js"></script>
 </head>
 <body>
+<!--[if lt IE 9]>
+<div class="browser-upgrade bg-info">
+    <div class="inner">
+        <p>你正在使用的浏览器已经 <strong>out</strong> 了. </p>
+
+        <p>请 <a href="http://browsehappy.com/">点击</a>更新你的浏览器~</p>
+    </div>
+</div><![endif]-->
 <!--头部-->
 <div class="Header w1 clearfix miaodian">
     <div class="Header-topBar">
