--- a/xyc.html
+++ b/xyc.html
@@ -12,22 +12,30 @@
 </head>
 
 <body>
+<!--[if lt IE 9]>
+<div class="browser-upgrade bg-info">
+    <div class="inner">
+        <p>你正在使用的浏览器已经 <strong>out</strong> 了. </p>
+
+        <p>请 <a href="http://browsehappy.com/">点击</a>更新你的浏览器~</p>
+    </div>
+</div><![endif]-->
   <!-- 顶部区域 -->
   <header>
     <!-- 通栏菜单 -->
     <div class="topbar hidden-sm hidden-xs">
       <div class="container">
         <div class="row">
-          <div class="tb-1 col-md-4">
+          <div class="tb-1 col-md-5">
             <a href="#" class="text-muted">
               <i class="icon-mobilephone"></i>
-              <span>全国统一服务热线：400-060-8800服务时间：9:00-18:00</span>
+              <span>全国统一服务热线：400-060-8800  服务时间：9:00-18:00</span>
             </a>
           </div>
           <div class="tb-2 col-md-2 text-left text-muted">
             <span>关注我们：</span><span class="top-wx"><img src="images/564e9e81915ef_1024.jpg" alt=""><div class="top-wximg"><img src="images/fwhewm.jpg" alt=""></div> <img src="images/564e9e81915ef_102.jpg" height="19" width="23" alt=""></span>
           </div>
-          <div class="tb-3 col-md-6 text-center">
+          <div class="tb-3 col-md-5 text-center">
             <a href="#" class="text-muted top-bar top-login">免费注册</a>
             <a href="#" class="text-muted top-bar">登录&nbsp;&nbsp;|</a>
             <a href="#" class="text-muted top-bar">手机客户端 &nbsp;&nbsp;  |</a>
@@ -41,15 +49,15 @@
     <!-- 导航菜单 -->
     <nav class="navbar navbar-lm" data-spy="affix" data-offset-top="200" data-offset-bottom="1000">
       <div class="container">
-        <div class="navbar-header">
+        <div class="navbar-header col-md-4">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav_menu" aria-expanded="false">
             <span class="sr-only">切换菜单显示</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">
-            <img src="images/xlogo_new.jpg" height="82" width="358" alt="">
+          <a class="navbar-brand hidden-sm" href="#">
+            <img src="images/xlogo_new.jpg" alt=""  height="80">
           </a>
         </div>
         <div class="collapse navbar-collapse" id="nav_menu">
@@ -61,7 +69,7 @@
             <li><a href="#">投资保障</a><i></i></li>
             <li><a href="#">活动专区</a><i></i></li>
           </ul>
-          <ul class="nav navbar-nav navbar-right hidden-sm ">
+          <ul class="nav navbar-nav navbar-right hidden-sm hidden-md">
             <li><a href="#">个人中心</a></li>
           </ul>
         </div>
