--- a/my.html
+++ b/my.html
@@ -22,7 +22,7 @@
        <ul>
            <li><a href="http://liuziming.github.io/secoo.html" target="blank"><img src="images/my05.jpg" alt=""/></a></li>
            <li><a href="http://liuziming.github.io/xyc.html" target="blank"><img src="images/my04.jpg" alt=""/></a></li>
-           <li><a href="http://liuziming.github.io/skip.html" target="blank"><img src="images/my03.jpg" alt=""/></a></li>
+           <li><a href="http://liuziming.github.io/xiaomi.html" target="blank"><img src="images/my03.jpg" alt=""/></a></li>
            <li><a href="http://liuziming.github.io/waterfall.html" target="blank"><img src="images/my02.jpg" alt=""/></a></li>
            <li><a href="http://liuziming.github.io/ball.html" target="blank"><img src="images/my01.jpg" alt=""/></a></li>
        </ul>
