--- a/xiaomi.html
+++ b/xiaomi.html
@@ -16,6 +16,11 @@
           </div>
       </div><![endif]-->
     <!-- header S -->
+    <div id="skip">
+      <img src="images/mifan.png" alt="" class="mifan">
+      <img src="images/mifans.png" height="210" width="844" alt="" class="mifans">
+      <div id="demos"></div>
+    </div>
     <div id="music">
       <nav>
           <ul>
@@ -222,6 +227,16 @@
     </ul>
   </div>
 
+    <div id="mistar" class="mistar w">
+     <h2>小米明星单品</h2>
+     <div class="control">
+       <span class="left"><</span>
+       <span class="right">></span>
+     </div>
+      <div class="starslider">
+
+      </div>
+    </div>
 
     <!-- Main E -->
 
