--- a/my.html
+++ b/my.html
@@ -5,8 +5,6 @@
     <title>个人小作品——刘明</title>
     <link rel="shortcut icon" href="images/1116649.png">
     <link rel="stylesheet" href="css/my.css"/>
-    <script type="text/javascript" src="js/animate.js"></script>
-    <script type="text/javascript" src="js/my.js"></script>
 </head>
 <body>
 <!--[if lt IE 9]>
@@ -17,6 +15,11 @@
         <p>请 <a href="http://browsehappy.com/">点击</a>更新你的浏览器~</p>
     </div>
 </div><![endif]-->
+<div id="layer">
+  <div id="mcanvas">
+    <button id="mclose"></button>
+  </div>
+</div>
 <div class="wrap" id="wrap">
    <div class="slide" id="slide">
        <ul>
@@ -33,4 +36,7 @@
    </div>
 </div>
 </body>
+<script src="js/jquery-1.11.1.min.js"></script>
+<script type="text/javascript" src="js/animate.js"></script>
+<script type="text/javascript" src="js/my.js"></script>
 </html>
