--- a/miregister.html
+++ b/miregister.html
@@ -170,9 +170,7 @@
           if(data.code != 10000) {
             alert('注册失败');
           } else {
-            location.href = 'http://liuziming.github.io/xiaomi.html;
-          }
-
+            location.href = 'http://liuziming.github.io/xiaomi.html';
         },
         error: function () {},
         complete: function () {
