--- a/xiaomi.html
+++ b/xiaomi.html
@@ -68,7 +68,7 @@
         <ul class="fr">
           <li>
             <a href="#">登录</a><i></i>
-            <a href="http://liuziming.github.io/miregister.html">注册</a>
+            <a href="http://liuziming.github.io/miregister.html" target="blank">注册</a>
             <a href="#" class="shortcat">购物车(0)</a>
           </li>
         </ul>
