--- a/xiaomi.html
+++ b/xiaomi.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>小米网</title>
+        <title>小米网模仿</title>
         <link rel="shortcut icon" href="images/xiaomiicon.png">
         <link rel="stylesheet" href="css/xiaomi.css">
     </head>
